blogpost creation now gets current user id for authorFK

--- a/BlogApp/Pages/Shared/_LoginPartial.cshtml
+++ b/BlogApp/Pages/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-page="/BlogPosts/Create" title="Manage">Make a post!</a>
+            <a class="nav-link text-dark" asp-area="" asp-page="BlogPosts/Create" title="Manage">Make a post!</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
