--- a/BlogApp/Pages/BlogPosts/Create.cshtml
+++ b/BlogApp/Pages/BlogPosts/Create.cshtml
@@ -13,11 +13,13 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="BlogPost.AuthorFK" class="control-label"></label>
-                <input asp-for="BlogPost.AuthorFK" class="form-control" />
-                <span asp-validation-for="BlogPost.AuthorFK" class="text-danger"></span>
-            </div>
+            <!--
+    <div class="form-group">
+        <label asp-for="BlogPost.AuthorFK" class="control-label"></label>
+        <input asp-for="BlogPost.AuthorFK" class="form-control" />
+        <span asp-validation-for="BlogPost.AuthorFK" class="text-danger"></span>
+    </div>
+        -->
             <div class="form-group">
                 <label asp-for="BlogPost.Title" class="control-label"></label>
                 <input asp-for="BlogPost.Title" class="form-control" />
@@ -46,6 +48,11 @@
         </form>
     </div>
 </div>
+<!--
+<p>
+    @ViewBag.userid
+</p>
+    -->
 
 <div>
     <a asp-page="Index">Back to List</a>
