--- a/BlogApp/Pages/Shared/_LoginPartial.cshtml
+++ b/BlogApp/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using BlogApp.Models 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
@@ -7,6 +8,9 @@
     {
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-page="BlogPosts/Create" title="Manage">Make a post!</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-page="Blog" title="Manage">Lookup at your blog!</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
